--- a/index.ejs
+++ b/index.ejs
@@ -21,28 +21,102 @@
 
        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
-       <script type="text/javascript" src="/js/bootstrap.bundle.js"></script>
-         <script type="text/javascript" src="/js/bootstrap.bundle.js.map"></script>
-           <script type="text/javascript" src="/js/bootstrap.bundle.min.js"></script>
-             <script type="text/javascript" src="/js/bootstrap.bundle.min.js.map"></script>
-           <script type="text/javascript" src="/js/bootstrap.js"></script>
-          <script type="text/javascript" src="/js/bootstrap.js.map"></script>
-        <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-      <script type="text/javascript" src="/js/bootstrap.min.js.map"></script>
+       <script type="text/javascript" src="/js/time.js"></script>
+        <script type="text/javascript" src="/js/bootstrap.bundle.js"></script>
+          <script type="text/javascript" src="/js/bootstrap.bundle.js.map"></script>
+            <script type="text/javascript" src="/js/bootstrap.bundle.min.js"></script>
+              <script type="text/javascript" src="/js/bootstrap.bundle.min.js.map"></script>
+                <script type="text/javascript" src="/js/bootstrap.js"></script>
+              <script type="text/javascript" src="/js/bootstrap.js.map"></script>
+            <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+          <script type="text/javascript" src="/js/bootstrap.min.js.map"></script>
+        <script type="text/javascript" src="/js/getlocation.js"></script>
+
+<!--
+    <script type="text/javascript">
+
+    function getLocation(){
+      if(navigator.geolocation){
+        navigator.geolocation.getCurrentPosition(showPosition);
+      }
+      else{
+        document.getElementById("temperature").innerHTML = "Temperature Unavailable";
+      }
+    }
+
+    function showPosition(position){
+      document.getElementById("temperature").innerHTML = "Latitude: " + position.coords.latitude + "<br>Longitude: " + position.coords.longitude;
+    }
+
+    /*
+    function getTemperature(){
+      request('api.openweathermap.org/data/2.5/weather?lat=' + lat + '&lon' + lon + '&appid=2b51b9dd07fa82fae66de057bfac1138', function (error, response, body){
+        console.log(JSON.parse(body, null, 4));
+        const newBody = JSON.parse(body);
+        let temp = newBody.main.temp;
+        temp -= 273;
+        document.getElementById("temperature").innerHTML = Math.round(temp);
+        console.log("Temp: " + Math.round(temp) + " °C");
+    */
+      }
+    }
+-->
+
+    </script>
 
   </head>
   <body class="bg-main">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-main">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-main justify-content-start">
       <a class="h3 text-white a-hover" href="/">Hem </a>
       <span class="h3 navbar-text text-white navtext-margin"> / </span>
     </nav>
 
-    <div class="container">
+    <div id="timeTemp" class="container">
       <div class="row justify-content-center">
-        <div class="col-md-6"></div>
+        <div class="col-md-3">
+
+        </div>
+        <div class="col-md-3 text-center">
+          <span class="text-white nobreak">
+            <h2>
+              <span id="clockFirst"> </span> <span class="clockSecond" id="clockSecond"> </span>
+            </h2>
+          </span>
+        </div>
+        <div class="col-md-3">
+          <h2 id="temperature" class="text-white"></h2>
+        </div>
       </div>
     </div>
+
+  <div class="container-md justify-content-center mx-auto">
+    <div class="row row-cols-1 row-cols-md-3 mx-auto">
+      <div class="col">
+        <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" href="/spel" role="button">
+          <img src="/img/spelsida.png" height="240px"></img>
+          <br>
+          Spel
+        </button>
+      </div>
+      <div class="col">
+        <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" href="/social" role="button">
+          <img src="/img/socialsida.png" height="240px"></img>
+          <br>
+          Social
+        </button>
+      </div>
+      <div class="col">
+        <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" href="/arbete" role="button">
+          <img src="/img/arbetssida.png" height="240px"></img>
+          <br>
+          Arbete
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <script type="text/javascript" src="/js/time.js"></script>
 
   </body>
 </html>
