--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,7 @@
   <body class="bg-main">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-main justify-content-start">
-      <a class="h3 text-white a-hover" href="/">Hem </a>
+      <a class="h3 text-white a-hover navtext-margin" href="/">Hem </a>
       <span class="h3 navbar-text text-white navtext-margin"> / </span>
     </nav>
 
@@ -92,38 +92,26 @@
 
   <div class="container-md justify-content-center mx-auto">
     <div class="row row-cols-1 row-cols-md-3 mx-auto">
-      <div class="col">
-
-        <a type="button" class="btn btn-secondary btn-outline-transparent text-black btn-textsize btn-lg btn-block" href="/spel">
-          <img src="/img/spelsida.png" height="240px"></img>
+      <div id="btn-col" class="col">
+        <a type="button" class="btn btn-secondary btn-outline-transparent text-black btn-textsize" href="/spel">
+          <img src="/img/spelsida.png" height="270px"></img>
           <br>
           Spel
         </a>
-
-        <!--
-        <a href="/spel">
-        <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" role="button">
-          <img src="/img/spelsida.png" height="240px"></img>
-          <br>
-          Spel
-        </button>
-      </a>
-    -->
-
       </div>
-      <div class="col">
-        <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" role="button">
-          <img src="/img/socialsida.png" height="240px"></img>
+      <div id="btn-col" class="col">
+        <a type="button" class="btn btn-secondary btn-outline-transparent text-black btn-textsize" href="/social">
+          <img src="/img/socialsida.png" height="270px"></img>
           <br>
           Social
-        </button>
+        </a>
       </div>
-      <div class="col">
-        <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" role="button">
-          <img src="/img/arbetssida.png" height="240px"></img>
+      <div id="btn-col" class="col">
+        <a type="button" class="btn btn-secondary btn-outline-transparent text-black btn-textsize" href="/arbete">
+          <img src="/img/arbetssida.png" height="270px"></img>
           <br>
           Arbete
-        </button>
+        </a>
       </div>
     </div>
   </div>
