--- a/views/spel.ejs
+++ b/views/spel.ejs
@@ -34,9 +34,9 @@
   <body class="bg-main">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-main justify-content-start">
-      <a class="h3 text-white a-hover" href="/">Hem </a>
+      <a class="h3 text-white a-hover navtext-margin" href="/">Hem </a>
       <span class="h3 navbar-text text-white navtext-margin"> / </span>
-      <a class="h3 navbar-text text-white navtext-margin" href="/spel"> Spel </span>
+      <a class="h3 text-white a-hover navtext-margin" href="/spel"> Spel </a>
     </nav>
 
     <div class="container">
@@ -58,15 +58,16 @@
           <div class="modal-dialog">
             <div class="modal-content bg-main text-white">
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
+                <h4 class="modal-title">osu!</h4>
               </div>
               <div class="modal-body">
-                <p>Some text in the modal.</p>
+                <span>
+                  <img src="http://s.ppy.sh/a/7228853" height="120px"></img>
+                  <p>Some modal text.</p>
+                </span>
               </div>
               <div class="modal-footer">
-                <button class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default text-white" data-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
