--- a/views/social.ejs
+++ b/views/social.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-      <title> Simon E.F. | Homepage </title>
+      <title> Simon E.F. | Social </title>
 
        <link rel="stylesheet" href="/css/bootstrap-grid.css">
          <link rel="stylesheet" type="text/plain" href="/css/bootstrap-grid.css.map">
@@ -34,48 +34,78 @@
   <body class="bg-main">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-main justify-content-start">
-      <a class="h3 text-white a-hover" href="/">Hem </a>
+      <a class="h3 text-white a-hover navtext-margin" href="/">Hem </a>
       <span class="h3 navbar-text text-white navtext-margin"> / </span>
-      <a class="h3 navbar-text text-white navtext-margin" href="/spel"> Spel </span>
+      <a class="h3 text-white a-hover navtext-margin" href="/social"> Social </a>
     </nav>
 
-    <div class="container">
+    <div id="timeTemp" class="container">
       <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-3">
 
+        </div>
+        <div class="col-md-3 text-center">
+          <span class="text-white nobreak">
+            <h2>
+              <span id="clockFirst"> </span> <span class="clockSecond" id="clockSecond"> </span>
+            </h2>
+          </span>
+        </div>
+        <div class="col-md-3">
+          <h2 id="temperature" class="text-white"></h2>
         </div>
       </div>
     </div>
 
   <div class="container-md">
     <div class="row row-cols-1 row-cols-md-3">
-      <div class="col">
-        <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" data-toggle="modal" data-target="#osuModal" role="button">
-          <img src="/img/osulogo.png" height="240px"></img>
-          osu!
+      <div id="btn-col" class="col">
+        <a href="https://twitter.com/simme1001" target="_blank">
+          <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" role="button">
+            <img src="/img/twitterlogo.png" height="240px"></img>
+            Twitter
+          </button>
+        </a>
+      </div>
+      <div id="btn-col" class="col">
+        <a href="https://www.instagram.com/simonfeltenmark/" target="_blank">
+          <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" role="button">
+            <img src="/img/instagramlogo.png" height="240px"></img>
+            Instagram
+          </button>
+        </a>
+      </div>
+      <div id="btn-col" class="col">
+        <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" data-toggle="modal" data-target="#discordModal" role="button">
+          <img src="/img/discordlogo.png" height="240px"></img>
+          Discord
         </button>
-        <div id="osuModal" class="modal fade" role="dialog">
+        <div id="discordModal" class="modal fade" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content bg-main text-white">
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
+                <h4 class="modal-title">Discord</h4>
               </div>
               <div class="modal-body">
-                <p>Some text in the modal.</p>
+                <p>
+                  Add me on Discord!
+                </p>
+                <p class="strong">
+                  simme1001#7925
+                </p>
               </div>
               <div class="modal-footer">
-                <button class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+                <button type="button" class="btn btn-default text-white" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
+        </div>
+
       </div>
-      <div class="col"></div>
-      <div class="col"></div>
     </div>
   </div>
+
+    <script type="text/javascript" src="/js/time.js"></script>
 
   </body>
 </html>
