--- a/views/spel.ejs
+++ b/views/spel.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-      <title> Simon E.F. | Homepage </title>
+      <title> Simon E.F. | Spel </title>
 
        <link rel="stylesheet" href="/css/bootstrap-grid.css">
          <link rel="stylesheet" type="text/plain" href="/css/bootstrap-grid.css.map">
@@ -39,17 +39,27 @@
       <a class="h3 text-white a-hover navtext-margin" href="/spel"> Spel </a>
     </nav>
 
-    <div class="container">
+    <div id="timeTemp" class="container">
       <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-3">
 
+        </div>
+        <div class="col-md-3 text-center">
+          <span class="text-white nobreak">
+            <h2>
+              <span id="clockFirst"> </span> <span class="clockSecond" id="clockSecond"> </span>
+            </h2>
+          </span>
+        </div>
+        <div class="col-md-3">
+          <h2 id="temperature" class="text-white"></h2>
         </div>
       </div>
     </div>
 
   <div class="container-md">
     <div class="row row-cols-1 row-cols-md-3">
-      <div class="col">
+      <div id="btn-col" class="col">
         <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" data-toggle="modal" data-target="#osuModal" role="button">
           <img src="/img/osulogo.png" height="240px"></img>
           osu!
@@ -80,17 +90,45 @@
             </div>
           </div>
       </div>
-      <div class="col">
+      <div id="btn-col" class="col">
         <a href="https://steamcommunity.com/id/simme1001" target="_blank">
           <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" role="button">
             <img src="/img/steamlogo.png" height="240px"></img>
-            Steam
+            Steam &nearr;
           </button>
         </a>
       </div>
-      <div class="col"></div>
+      <div id="btn-col" class="col">
+        <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" data-toggle="modal" data-target="#discordModal" role="button">
+          <img src="/img/discordlogo.png" height="240px"></img>
+          Discord
+        </button>
+        <div id="discordModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content bg-main text-white">
+              <div class="modal-header">
+                <h4 class="modal-title">Discord</h4>
+              </div>
+              <div class="modal-body">
+                <p>
+                  Add me on Discord!
+                </p>
+                <p class="strong">
+                  simme1001#7925
+                </p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default text-white" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
+
+  <script type="text/javascript" src="/js/time.js"></script>
 
   </body>
 </html>
