--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-      <title> Simon E.F. | Homepage </title>
+      <title> Simon E.F. | Hem </title>
 
        <link rel="stylesheet" href="/css/bootstrap-grid.css">
          <link rel="stylesheet" type="text/plain" href="/css/bootstrap-grid.css.map">
