--- a/views/social.ejs
+++ b/views/social.ejs
@@ -63,15 +63,15 @@
         <a href="https://twitter.com/simme1001" target="_blank">
           <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" role="button">
             <img src="/img/twitterlogo.png" height="240px"></img>
-            Twitter
+            Twitter&nearr;
           </button>
         </a>
       </div>
       <div id="btn-col" class="col">
-        <a href="https://www.instagram.com/simonfeltenmark/" target="_blank">
+        <a href="https://www.instagram.com/simonfeltenmark" target="_blank">
           <button class="btn btn-secondary btn-outline-transparent text-black btn-textsize" role="button">
             <img src="/img/instagramlogo.png" height="240px"></img>
-            Instagram
+            Instagram&nearr;
           </button>
         </a>
       </div>
